SUBDIRS = .

noinst_LTLIBRARIES = libproxygenservices.la

libproxygenservicesdir = $(includedir)/proxygen/lib/services
nobase_libproxygenservices_HEADERS = \
	AcceptorConfiguration.h \
	HTTPAcceptor.h \
	RequestWorker.h \
	Service.h \
	ServiceConfiguration.h \
	ServiceWorker.h \
	WorkerThread.h

libproxygenservices_la_SOURCES = \
	RequestWorker.cpp \
	Service.cpp \
	WorkerThread.cpp
